objects/C360HealthScore__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Customer or BU Account Numbers</description>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_Customer_Name__c</fullName>
        <label>CX Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_hi__c</fullName>
        <description>Overall Health Score values</description>
        <label>Customer_hi</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Score__c</fullName>
        <label>Finance Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Score__c</fullName>
        <label>Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentiment_Score__c</fullName>
        <label>Sentiment Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wow_Status__c</fullName>
        <label>Wow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>C360HealthScore</label>
    <nameField>
        <label>C360HealthScore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C360HealthScores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>